# MolecularDynamics

./: .clang-format  CMakeLists.txt  README.md  build.sh  main.cpp  main_exam.cpp  main_seq.cpp  main_sycl.cpp
benchmarks/: CMakeLists.txt  benchmark_decomposition.cpp  benchmark_lennard_jones.cpp
cmake/: FindSYCL.cmake
include/: helpers.hpp  molecular_dynamics.h  molecular_dynamics.hpp  sim  sim_common.hpp  sim_config.hpp  sim_seq.h  sim_sycl.h  sim_user_helpers.hpp  simulation_runner.h  span_helper.hpp
include/backend/: backend_interface.h  cpu_backend.hpp  sycl_backend.hpp
include/backend/cpu/: cpu_backend.h  cpu_backend.hpp  domain_decomposition.hpp
include/backend/sycl/: sycl_backend.h  sycl_backend.hpp  sycl_backend_impl_reductions.hpp
include/backends/: backend.h  cpu_backend.hpp
include/internal/: cpp_utils.hpp  fallback_span.hpp  pdb_writer.hpp  sim_common.hpp  sim_config.hpp  sim_math.hpp  sycl_usm_smart_ptr.hpp  utils.hpp
include/molecular_dynamics/: molecular_dynamics.h  molecular_dynamics.hpp
samples/: examen.vit  examen.xyz  particule.xyz
src/: cpu_backend.cpp  molecular_dynamics.cpp  molecular_dynamics_cpu.cpp  molecular_dynamics_sycl.cpp  sim_seq.cpp  sim_sycl.cpp  sycl_backend.cpp  sycl_backend_reductions.hpp
